# learnOpenGL

./: .gitignore
3rdpart/glad/include/glad/: glad.h
3rdpart/glad/src/: glad.c
3rdpart/glfw/lib/: glfw3.lib
3rdpart/glfw/lib/pkgconfig/: glfw3.pc
learn/3.2.shaders_interpolation/MMGL/: CMakeLists.txt  mmprogram.cpp  mmvao.cpp  mmvao.h
learn/3.2.shaders_interpolation/MMOpengl/: MMOpengl.cpp
learn/4.1.Texture/MMGL/: CMakeLists.txt
learn/4.1.Texture/MMOpengl/: MMOpengl.cpp
learn/4.2.Texture/MMGL/: mmvao.cpp  mmvao.h
learn/4.2.Texture/MMOpengl/: MMOpengl.cpp
learn/5.0.model transform and projection/: CMakeLists.txt  redmin.txt
learn/5.0.model transform and projection/MMGL/: mmprogram.h
learn/5.0.model transform and projection/MMOpengl/: CMakeLists.txt  MMOpengl.cpp
learn/MMOpengl/: CMakeLists.txt
learn/MMOpengl/MMOpengl/: CMakeLists.txt  MMOpengl.cpp
learn/chapter2/: CMakeLists.txt
learn/chapter2/MMGL/: mmprogram.cpp  mmprogram.h  mmshader.cpp  mmshader.h
learn/chapter2/MMOpengl/: MMOpengl.cpp
learn/chapter3/MMGL/: CMakeLists.txt  mmprogram.cpp  mmshader.cpp
learn/chapter3/MMOpengl/: MMOpengl.cpp
learn/chapter4/MMGL/: mmshader.cpp  mmvao.cpp  mmvao.h
learn/chapter4/MMOpengl/: MMOpengl.cpp
learn/chapter5/: redmin.txt
learn/chapter5/MMGL/: mmprogram.h  mmvao.cpp
learn/chapter5/MMOpengl/: MMOpengl.cpp
learn/chapter6/MMGL/: mmvao.h
learn/chapter6/MMOpengl/: CMakeLists.txt  MMOpengl.cpp
